--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>オリパ設計シミュレーターオンライン v2.4</title>
+    <title>オリパシミュレーターオンラインUltra v1.0</title>
     <style>
         :root {
             /* 最新のiOS風カラーパレット */
@@ -1613,7 +1613,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>オリパ設計シミュレーターオンライン <span class="version-badge">v2.4</span></h1>
+        <h1>オリパシミュレーターオンラインUltra <span class="version-badge">v1.0</span></h1>
 
         <!-- タブナビゲーション -->
         <div class="tab-navigation">
